WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135933
ImageBufferDataCairo.h is missing header guards
https://bugs.webkit.org/show_bug.cgi?id=135933
Summary
ImageBufferDataCairo.h is missing header guards
Zan Dobersek
Reported
2014-08-14 02:19:32 PDT
ImageBufferDataCairo.h is missing header guards
Attachments
Patch
(1.24 KB, patch)
2014-08-14 02:21 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2014-08-14 02:21:31 PDT
Created
attachment 236584
[details]
Patch
Zan Dobersek
Comment 2
2014-08-14 02:38:27 PDT
Comment on
attachment 236584
[details]
Patch Clearing flags on attachment: 236584 Committed
r172580
: <
http://trac.webkit.org/changeset/172580
>
Zan Dobersek
Comment 3
2014-08-14 02:38:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug