ImageBufferDataCairo.h is missing header guards https://bugs.webkit.org/show_bug.cgi?id=135933

Reviewed by Philippe Normand.

* platform/graphics/cairo/ImageBufferDataCairo.h:
Add the missing head guards to avoid problems when re-inclusion occurs.


Canonical link: https://commits.webkit.org/153788@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172580 268f45cc-cd09-0410-ab3c-d52691b4dbfc