Source/WebCore/platform/graphics/cairo/ImageBufferDataCairo.h
@@ -23,6 +23,9 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+#ifndef ImageBufferDataCairo_h
+#define ImageBufferDataCairo_h
+
 #include "PlatformContextCairo.h"
 #include "RefPtrCairo.h"
 
@@ -54,3 +57,5 @@ public:
 };
 
 } // namespace WebCore
+
+#endif // ImageBufferDataCairo_h
